# kochanyeol

./: .gitignore  README.md  desktop.ini  pyproject.toml  temp.py  test_simple.py
DAY_1 과제/: CH_4_task  CH_4_tesk.ipynb
DAY_1_과제/: CH_4_tesk  test_simple.py
DAY_2_과제/: CH_5-8_test  CH_5-8_test.ipynb
OZ_CODING_ADMIN_과제/DAY_1_과제/: admin.css  admin.html  admin.js  signup.css  signup.html  signup.js
OZ_CODING_CSS_과제/DAY_1_과제/: CH_1-10_test.css  CH_1-10_test.html
OZ_CODING_CSS_과제/DAY_2_과제/: CH_11-17_test.css  CH_11-17_test.html
OZ_CODING_DB_과제/DAY_1_DB_과제/: CH_1-6_test.ipynb
OZ_CODING_DB_과제/DAY_1_과제/: CH_1-6_test.ipynb  CH_1-6_과제.ipynb
OZ_CODING_DB_과제/DAY_2_과제/: CH_7-13_test.ipynb  CH_7-13_과제.sql  CH_7_13_test.ipynb
OZ_CODING_DB_과제/DAY_3_과제/: CH_14-20_과제.sql
OZ_CODING_DJANGO_과제/: pyproject.toml
OZ_CODING_DJANGO_과제/DAY_4_과제/: pyproject.toml
OZ_CODING_DJANGO_과제/DAY_4_과제/accounts/: urls.py  views.py
OZ_CODING_DJANGO_과제/DAY_4_과제/accounts/templates/accounts/: login.html
OZ_CODING_DJANGO_과제/DAY_4_과제/config/: settings.py  urls.py
OZ_CODING_DJANGO_과제/DAY_4_과제/todo/: forms.py  models.py  urls.py  views.py
OZ_CODING_DJANGO_과제/DAY_4_과제/todo/migrations/: 0001_initial.py
OZ_CODING_DJANGO_과제/DAY_4_과제/todo/templates/todo/: base.html  todo_info.html  todo_list.html
OZ_CODING_DJANGO_과제/vod강의/3일차 강의내용/: .python-version  pyproject.toml
OZ_CODING_DJANGO_과제/vod강의/3일차 강의내용/blog/: admin.py  models.py  urls.py  views.py
OZ_CODING_DJANGO_과제/vod강의/3일차 강의내용/blog/migrations/: 0001_initial.py
OZ_CODING_DJANGO_과제/vod강의/3일차 강의내용/config/: settings.py  urls.py
OZ_CODING_DJANGO_과제/vod강의/3일차 강의내용/member/: urls.py  views.py
OZ_CODING_DJANGO_과제/vod강의/3일차 강의내용/templates/: blog_detail.html  blog_list.html
OZ_CODING_DJANGO_과제/vod강의/3일차 강의내용/templates/registration/: login.html  signup.html
OZ_CODING_FASTAPI_과제/: .gitignore
OZ_CODING_FASTAPI_과제/DAY_1_과제/: .gitignore  README.md  main.py  pyproject.toml  temp.py  test_simple.py
OZ_CODING_FASTAPI_과제/DAY_3_과제/: README.md  asgi.py  pyproject.toml  test.sh
OZ_CODING_FASTAPI_과제/DAY_3_과제/app/: __init__.py
OZ_CODING_FASTAPI_과제/DAY_3_과제/app/apis/v1/: meeting_router.py
OZ_CODING_FASTAPI_과제/DAY_3_과제/app/dtos/: create_meeting_response.py  frozen_config.py
OZ_CODING_FASTAPI_과제/DAY_3_과제/app/utils/: base62.py
(+172 files in other folders)
