[tool.poetry]
name = "day-4-과제"
version = "0.1.0"
description = ""
authors = ["kochanyeol <cksdufqqpu@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"