[tool.poetry]
name = "day-3-과제"
version = "0.1.0"
description = ""
authors = ["kochanyeol <cksdufqqpu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.3"
ipython = "^9.11.0"
django-extensions = "^4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
